// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tutorial Test Suite via Socket.io Test Tutorials Move should be able to be performed 1`] = `
Object {
  "game": Object {
    "colors": Array [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coop": false,
    "created": 0,
    "game": Object {
      "activePlayer": 1,
      "aussetzenFlag": false,
      "balls": Array [
        Object {
          "player": 0,
          "position": 16,
          "state": "invalid",
        },
        Object {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "cards": Object {
        "dealingPlayer": 2,
        "deck": Array [
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
        ],
        "discardPile": Array [
          "1",
        ],
        "discardPlayer": 0,
        "meisterVersion": true,
        "players": Array [
          Array [
            "5",
            "12",
            "7",
            "8",
          ],
          Array [
            "1",
            "1",
            "6",
            "tac",
            "engel",
          ],
          Array [
            "2",
            "2",
            "trickser",
            "1",
            "10",
          ],
          Array [
            "7",
            "8",
            "8",
            "7",
            "7",
          ],
        ],
      },
      "cardsWithMoves": Array [
        Object {
          "ballActions": Object {
            "4": Array [
              32,
            ],
            "5": Array [
              32,
            ],
            "6": Array [
              32,
            ],
            "7": Array [
              32,
            ],
          },
          "possible": true,
          "textAction": "",
          "title": "1",
        },
        Object {
          "ballActions": Object {
            "4": Array [
              32,
            ],
            "5": Array [
              32,
            ],
            "6": Array [
              32,
            ],
            "7": Array [
              32,
            ],
          },
          "possible": true,
          "textAction": "",
          "title": "1",
        },
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "6",
        },
        Object {
          "ballActions": Object {
            "4": Array [
              32,
            ],
            "5": Array [
              32,
            ],
            "6": Array [
              32,
            ],
            "7": Array [
              32,
            ],
          },
          "possible": true,
          "textAction": "",
          "title": "tac",
        },
        Object {
          "ballActions": Object {
            "10": Array [
              48,
            ],
            "11": Array [
              48,
            ],
            "8": Array [
              48,
            ],
            "9": Array [
              48,
            ],
          },
          "possible": true,
          "textAction": "",
          "title": "engel",
        },
      ],
      "coop": false,
      "gameEnded": false,
      "nPlayers": 4,
      "narrFlag": Array [
        false,
        false,
        false,
        false,
      ],
      "priorBalls": Array [
        Object {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "sevenChosenPlayer": null,
      "statistic": Array [],
      "teams": Array [
        Array [
          0,
          2,
        ],
        Array [
          1,
          3,
        ],
      ],
      "teufelFlag": false,
      "tradeCards": Array [
        "",
        "",
        "",
        "",
      ],
      "tradeDirection": -1,
      "tradeFlag": false,
      "winningTeams": Array [
        false,
        false,
      ],
    },
    "id": 0,
    "lastPlayed": 0,
    "nPlayers": 4,
    "nTeams": 2,
    "playerIDs": Array [
      0,
      0,
      0,
      0,
    ],
    "players": Array [
      "Du",
      "-Kai-",
      "-Oskar-",
      "-Sophia-",
    ],
    "rematch_open": false,
    "status": "running",
    "tournamentid": null,
  },
  "updateData": Object {
    "aussetzenFlag": false,
    "balls": Array [
      Object {
        "player": 0,
        "position": 16,
        "state": "invalid",
      },
      Object {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "cards": Array [
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "5",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "12",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "7",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "8",
      },
    ],
    "colors": Array [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coopCounter": -1,
    "created": 0,
    "deckInfo": Array [
      2,
      24,
    ],
    "discardPile": Array [
      "1",
    ],
    "gameEnded": false,
    "gamePlayer": 0,
    "lastPlayed": 0,
    "ownCards": Array [
      "5",
      "12",
      "7",
      "8",
    ],
    "players": Array [
      Object {
        "active": false,
        "discarded": true,
        "name": "Du",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 0,
        "remainingCards": 4,
        "team": 0,
      },
      Object {
        "active": true,
        "discarded": false,
        "name": "-Kai-",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 1,
        "remainingCards": 5,
        "team": 1,
      },
      Object {
        "active": false,
        "discarded": false,
        "name": "-Oskar-",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 2,
        "remainingCards": 5,
        "team": 0,
      },
      Object {
        "active": false,
        "discarded": false,
        "name": "-Sophia-",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 3,
        "remainingCards": 5,
        "team": 1,
      },
    ],
    "priorBalls": Array [
      Object {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "rematch_open": false,
    "statistic": Array [],
    "status": "running",
    "teufelFlag": false,
    "tradeDirection": -1,
    "winningTeams": Array [
      false,
      false,
    ],
  },
}
`;

exports[`Tutorial Test Suite via Socket.io Test Tutorials Tutorial step should be loaded for authenticated user 1`] = `
Object {
  "config": Object {},
  "game": Object {
    "colors": Array [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coop": false,
    "created": 0,
    "game": Object {
      "activePlayer": 0,
      "aussetzenFlag": false,
      "balls": Array [
        Object {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "cards": Object {
        "dealingPlayer": 2,
        "deck": Array [
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
        ],
        "discardPile": Array [],
        "meisterVersion": true,
        "players": Array [
          Array [
            "5",
            "1",
            "12",
            "7",
            "8",
          ],
          Array [
            "1",
            "1",
            "6",
            "tac",
            "engel",
          ],
          Array [
            "2",
            "2",
            "trickser",
            "1",
            "10",
          ],
          Array [
            "7",
            "8",
            "8",
            "7",
            "7",
          ],
        ],
      },
      "cardsWithMoves": Array [
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "5",
        },
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "1",
        },
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "12",
        },
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "7",
        },
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "8",
        },
      ],
      "coop": false,
      "gameEnded": false,
      "nPlayers": 4,
      "narrFlag": Array [
        false,
        false,
        false,
        false,
      ],
      "priorBalls": Array [
        Object {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "statistic": Array [],
      "teams": Array [
        Array [
          0,
          2,
        ],
        Array [
          1,
          3,
        ],
      ],
      "teufelFlag": false,
      "tradeCards": Array [
        "",
        "",
        "",
        "",
      ],
      "tradeDirection": -1,
      "tradeFlag": false,
      "winningTeams": Array [
        false,
        false,
      ],
    },
    "id": 0,
    "lastPlayed": 0,
    "nPlayers": 4,
    "nTeams": 2,
    "playerIDs": Array [
      0,
      0,
      0,
      0,
    ],
    "players": Array [
      "Du",
      "-Kai-",
      "-Oskar-",
      "-Sophia-",
    ],
    "rematch_open": false,
    "status": "running",
    "tournamentid": null,
  },
  "goal": null,
  "updateData": Object {
    "aussetzenFlag": false,
    "balls": Array [
      Object {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "cards": Array [
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "5",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "1",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "12",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "7",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "8",
      },
    ],
    "colors": Array [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coopCounter": -1,
    "created": 0,
    "deckInfo": Array [
      2,
      24,
    ],
    "discardPile": Array [],
    "gameEnded": false,
    "gamePlayer": 0,
    "lastPlayed": 0,
    "ownCards": Array [
      "5",
      "1",
      "12",
      "7",
      "8",
    ],
    "players": Array [
      Object {
        "active": true,
        "discarded": false,
        "name": "Du",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 0,
        "remainingCards": 5,
        "team": 0,
      },
      Object {
        "active": false,
        "discarded": false,
        "name": "-Kai-",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 1,
        "remainingCards": 5,
        "team": 1,
      },
      Object {
        "active": false,
        "discarded": false,
        "name": "-Oskar-",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 2,
        "remainingCards": 5,
        "team": 0,
      },
      Object {
        "active": false,
        "discarded": false,
        "name": "-Sophia-",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 3,
        "remainingCards": 5,
        "team": 1,
      },
    ],
    "priorBalls": Array [
      Object {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "rematch_open": false,
    "statistic": Array [],
    "status": "running",
    "teufelFlag": false,
    "tradeDirection": -1,
    "winningTeams": Array [
      false,
      false,
    ],
  },
}
`;

exports[`Tutorial Test Suite via Socket.io Test Tutorials Tutorial step should be loaded for unauthenticated user 1`] = `
Object {
  "config": Object {},
  "game": Object {
    "colors": Array [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coop": false,
    "created": 0,
    "game": Object {
      "activePlayer": 0,
      "aussetzenFlag": false,
      "balls": Array [
        Object {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "cards": Object {
        "dealingPlayer": 2,
        "deck": Array [
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
        ],
        "discardPile": Array [],
        "meisterVersion": true,
        "players": Array [
          Array [
            "5",
            "1",
            "12",
            "7",
            "8",
          ],
          Array [
            "1",
            "1",
            "6",
            "tac",
            "engel",
          ],
          Array [
            "2",
            "2",
            "trickser",
            "1",
            "10",
          ],
          Array [
            "7",
            "8",
            "8",
            "7",
            "7",
          ],
        ],
      },
      "cardsWithMoves": Array [
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "5",
        },
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "1",
        },
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "12",
        },
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "7",
        },
        Object {
          "ballActions": Object {},
          "possible": false,
          "textAction": "",
          "title": "8",
        },
      ],
      "coop": false,
      "gameEnded": false,
      "nPlayers": 4,
      "narrFlag": Array [
        false,
        false,
        false,
        false,
      ],
      "priorBalls": Array [
        Object {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        Object {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        Object {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        Object {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        Object {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "statistic": Array [],
      "teams": Array [
        Array [
          0,
          2,
        ],
        Array [
          1,
          3,
        ],
      ],
      "teufelFlag": false,
      "tradeCards": Array [
        "",
        "",
        "",
        "",
      ],
      "tradeDirection": -1,
      "tradeFlag": false,
      "winningTeams": Array [
        false,
        false,
      ],
    },
    "id": 0,
    "lastPlayed": 0,
    "nPlayers": 4,
    "nTeams": 2,
    "playerIDs": Array [
      0,
      0,
      0,
      0,
    ],
    "players": Array [
      "Du",
      "-Kai-",
      "-Oskar-",
      "-Sophia-",
    ],
    "rematch_open": false,
    "status": "running",
    "tournamentid": null,
  },
  "goal": Object {
    "modalState": "settings",
  },
  "updateData": Object {
    "aussetzenFlag": false,
    "balls": Array [
      Object {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "cards": Array [
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "5",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "1",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "12",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "7",
      },
      Object {
        "ballActions": Object {},
        "possible": false,
        "textAction": "",
        "title": "8",
      },
    ],
    "colors": Array [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coopCounter": -1,
    "created": 0,
    "deckInfo": Array [
      2,
      24,
    ],
    "discardPile": Array [],
    "gameEnded": false,
    "gamePlayer": 0,
    "lastPlayed": 0,
    "ownCards": Array [
      "5",
      "1",
      "12",
      "7",
      "8",
    ],
    "players": Array [
      Object {
        "active": true,
        "discarded": false,
        "name": "Du",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 0,
        "remainingCards": 5,
        "team": 0,
      },
      Object {
        "active": false,
        "discarded": false,
        "name": "-Kai-",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 1,
        "remainingCards": 5,
        "team": 1,
      },
      Object {
        "active": false,
        "discarded": false,
        "name": "-Oskar-",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 2,
        "remainingCards": 5,
        "team": 0,
      },
      Object {
        "active": false,
        "discarded": false,
        "name": "-Sophia-",
        "narrFlag": Array [
          false,
          false,
        ],
        "playerNumber": 3,
        "remainingCards": 5,
        "team": 1,
      },
    ],
    "priorBalls": Array [
      Object {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      Object {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      Object {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      Object {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      Object {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "rematch_open": false,
    "statistic": Array [],
    "status": "running",
    "teufelFlag": false,
    "tradeDirection": -1,
    "winningTeams": Array [
      false,
      false,
    ],
  },
}
`;
